# pycpt

./: .gitignore  MANIFEST.in  README.ipynb  README.md  README_old.md  build_readme.py  main.py  matplotlibrc  pyproject.toml
cpt-city/: VERSION.xml
cpt-city/heine/: COPYING.xml  ICS_GTS2012_Epoch.cpt  ICS_GTS2012_Era.cpt  ICS_GTS2012_Period.cpt  ICS_GTS2022v02_Age.cpt  ICS_GTS2022v02_Eon.cpt  ICS_GTS2022v02_Epoch.cpt  ICS_GTS2022v02_Era.cpt
cpt-city/nr/: COPYING.xml
logo/: logo.py
notebooks/: example.ipynb
pycpt/: __init__.py  colors.py  cpt.py  export_md.py  files.py
pycpt/cpt-city/heine/: ICS_GTS2012_Age.cpt  ICS_GTS2012_Eon.cpt  ICS_GTS2022v02_Period.cpt
