[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycpt"
version = "0.1.0"
description = "Read and use CPT (Color Palette Table) colormaps from cpt-city in Matplotlib"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "jupyter>=1.1.1",
]

[project.urls]
Homepage = "https://github.com/yourname/pycpt"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pycpt*"]
exclude = ["notebooks*", "tests*", "examples*"]
